--- a/LR1/index.html
+++ b/LR1/index.html
@@ -4,9 +4,11 @@
 <script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
 
 <body style="margin: 0px; overflow: scroll;">
-    <a-scene embedded arjs>
-        <a-box possition="0 0.5 0" material="opacity: 0.5;"></a-box>
-        <a-marker-camera present="hiro"></a-marker-camera>
+    <a-scene embedded arjs="patternRatio: 0.7">
+        <a-marker type="pattern 'url='path / to / pattern-marker.patt">
+            <a-box position="0 0,5 0"material ='opacity: 0.5;'></a-box>
+        </a-marker>
+        <a-entity camera></a-entity>
     </a-scene>
 </body>
 </html>
